fix store code, add code validation
